<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina3_5" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OtusTestsProject" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4IL-km-yqu">
                                <rect key="frame" x="20" y="37" width="280" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feedback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r3h-ZD-GRO">
                                <rect key="frame" x="20" y="0.0" width="280" height="29"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mZ5-fu-3Hn">
                                <rect key="frame" x="20" y="121" width="280" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aIx-Dg-zc0">
                                <rect key="frame" x="20" y="79" width="280" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6u-cc-u90">
                                <rect key="frame" x="20" y="163" width="69" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rQN-ij-YkF">
                                <rect key="frame" x="20" y="192" width="280" height="128"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="128" id="MEB-rV-Vqj"/>
                                </constraints>
                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0UW-fa-qBY">
                                <rect key="frame" x="142" y="328" width="36" height="30"/>
                                <state key="normal" title="Send"/>
                                <connections>
                                    <action selector="sendFeedbackClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5DK-4r-onr"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cg-XC-jpz">
                                <rect key="frame" x="86" y="368" width="148" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="statusLabelIndentifier"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="ltE-XX-nVt"/>
                                    <constraint firstAttribute="width" constant="148" id="wcM-Sn-Dzl"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Z6u-cc-u90" secondAttribute="trailing" symbolic="YES" id="2Vi-Vb-SDg"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4IL-km-yqu" secondAttribute="trailing" constant="20" id="4dR-zH-ydj"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aIx-Dg-zc0" secondAttribute="trailing" constant="20" id="7zC-Ez-MQh"/>
                            <constraint firstItem="9cg-XC-jpz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HkG-dq-WaW"/>
                            <constraint firstItem="4IL-km-yqu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ISI-8W-3uv"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r3h-ZD-GRO" secondAttribute="trailing" constant="20" id="Iyt-1b-Eug"/>
                            <constraint firstItem="9cg-XC-jpz" firstAttribute="top" secondItem="0UW-fa-qBY" secondAttribute="bottom" constant="10" id="KZf-Yh-S14"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rQN-ij-YkF" secondAttribute="trailing" constant="20" id="MoV-bK-A7k"/>
                            <constraint firstItem="aIx-Dg-zc0" firstAttribute="top" secondItem="4IL-km-yqu" secondAttribute="bottom" constant="8" id="Osi-Ev-iKm"/>
                            <constraint firstItem="r3h-ZD-GRO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Rm4-Tx-sLx"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mZ5-fu-3Hn" secondAttribute="trailing" constant="20" id="SqJ-k2-9ZI"/>
                            <constraint firstItem="aIx-Dg-zc0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="WpR-iB-edB"/>
                            <constraint firstItem="Z6u-cc-u90" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="aCQ-y0-Io0"/>
                            <constraint firstItem="mZ5-fu-3Hn" firstAttribute="top" secondItem="aIx-Dg-zc0" secondAttribute="bottom" constant="8" id="beI-Ng-ten"/>
                            <constraint firstItem="Z6u-cc-u90" firstAttribute="top" secondItem="mZ5-fu-3Hn" secondAttribute="bottom" constant="8" id="d9b-y4-zdg"/>
                            <constraint firstItem="0UW-fa-qBY" firstAttribute="top" secondItem="rQN-ij-YkF" secondAttribute="bottom" constant="8" id="eZK-1a-YBS"/>
                            <constraint firstItem="rQN-ij-YkF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="h3q-na-lTk"/>
                            <constraint firstItem="mZ5-fu-3Hn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="j3T-bL-z1n"/>
                            <constraint firstItem="0UW-fa-qBY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kNQ-ve-mlp"/>
                            <constraint firstItem="r3h-ZD-GRO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qTk-WQ-EKq"/>
                            <constraint firstItem="4IL-km-yqu" firstAttribute="top" secondItem="r3h-ZD-GRO" secondAttribute="bottom" constant="8" id="qXg-fr-4VS"/>
                            <constraint firstItem="rQN-ij-YkF" firstAttribute="top" secondItem="Z6u-cc-u90" secondAttribute="bottom" constant="8" id="tgq-3H-fQm"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="emailField" destination="mZ5-fu-3Hn" id="atr-x8-3kS"/>
                        <outlet property="firstNameField" destination="4IL-km-yqu" id="845-En-x89"/>
                        <outlet property="lastNameField" destination="aIx-Dg-zc0" id="QSY-hO-TYz"/>
                        <outlet property="messageTextView" destination="rQN-ij-YkF" id="PXN-F7-uHh"/>
                        <outlet property="statusLabel" destination="9cg-XC-jpz" id="caH-LX-e7d"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.875" y="140"/>
        </scene>
    </scenes>
</document>
